# repository-playground

./: CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
baseline/: README.md  baseline_client.py
docs/: BASELINE.md  CONCEPT.md  DESIGN-NOTES.md  TUF-CLIENT-DESIGN.md  TUF-DESIGN-QUESTIONS.md  TUF-MINIMAL.md  TUF-ROADMAP.md  USER-STORIES.md
docs/design-milestones/: 00-BASELINE.md  01-TUF-MINIMAL.md  02-GIT-REPO.md
playground/: IMPLEMENTATION-NOTES.md  README.md  requirements.txt  tox.ini
playground/actions/compile/: action.yml
playground/actions/offline-version-bump/: action.yml
playground/actions/online-version-bump/: action.yml
playground/actions/signing-event/: action.yml
playground/actions/snapshot/: action.yml
playground/actions/version-bump/: action.yml
playground/client/: playground_client.py
playground/repo/: README.md  online_repo.py  pyproject.toml  repo  requirements.txt
playground/repo/playground/: __init__.py  _playground_repository.py  bump_expiring.py  publish.py  snapshot.py  status.py  timestamp.py  update_event_state.py
playground/repo/test/: test_playground_reposiory.py
playground/signer/: README.md  _signer_repository.py  create-config-file.sh  init-siger.sh  playground-sign.py  pyproject.toml  requirements.txt  tool  tool_repo.py
playground/signer/playground_sign/: __init__.py  _common.py  _signer_repository.py  _user.py  delegate.py  main.py  sign.py
playground/tests/: README.md  e2e.sh
playground/tests/expected/basic/metadata/: 1.root.json  1.snapshot.json  1.targets.json  timestamp.json
playground/tests/expected/multi-user-signing/metadata/: 1.root.json  1.targets.json
playground/tests/expected/online-version-bump/metadata/: 1.root.json  (+3 more)
playground/tests/softhsm/: README  eckey.pem
tuf/: README.md
tuf/client/: playground_client.py
(+3 files in other folders)
