[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# for git dependencies
allow-direct-references = true

[project]
name = "playground"
version = "0.0.1"
description = "CI tools for Repository Plaground"
readme = "README.md"
dependencies = [
  "securesystemslib[gcpkms]", 
  "tuf @ git+https://github.com/theupdateframework/python-tuf",
  "click",
]

[project.scripts]
playground-status = "playground:status_cli"
