[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# for git dependencies
allow-direct-references = true

[project]
name = "playground"
version = "0.0.1"
description = "CI tools for Repository Plaground"
readme = "README.md"
dependencies = [
  "securesystemslib[gcpkms, sigstore, pynacl] @ git+https://github.com/secure-systems-lab/securesystemslib", 
  "tuf @ git+https://github.com/theupdateframework/python-tuf",
  "click",
]
requires-python = ">=3.10"

[project.scripts]
playground-status = "playground:status"
playground-snapshot = "playground:snapshot"
playground-bump-online = "playground:bump_online"
playground-bump-offline = "playground:bump_offline"
